--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/joyreacher/portfolio-website/issues"
   },
-  "homepage": "https://github.com/joyreacher/portfolio-website#readme"
+  "homepage": "https://github.com/joyreacher/portfolio-website#readme",
+  "devDependencies": {
+    "stylelint": "^9.3.0",
+    "stylelint-config-standard": "^18.3.0"
+  }
 }
